fix: fix some layout issues

--- a/MyTube/src/app/search/search-item/search-item.component.scss
+++ b/MyTube/src/app/search/search-item/search-item.component.scss
@@ -7,7 +7,12 @@ $btn-color: hsla(0, 0%, 43.5%, 0.4);
   border-radius: 5px;
   background: $card-color;
   text-align: center;
-  cursor: pointer;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  
+
+  // cursor: pointer;
 
   &.border {
     border-bottom: 3px solid #793434;
@@ -31,72 +36,20 @@ $btn-color: hsla(0, 0%, 43.5%, 0.4);
 }
 
 .item__data {
+  max-width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   font-size: 10px;
   padding: 25px 0;
+}
 
-  .views {
-    padding-left: 22px;
-    position: relative;
-
-    &::before {
-      content: "";
-      position: absolute;
-      background: url(../../../assets/icons/viewed.svg);
-      top: 3px;
-      left: 0;
-      width: 20px;
-      height: 13px;
-    }
-  }
-
-  .like {
-    padding-left: 17px;
-    position: relative;
-
-    &::before {
-      content: "";
-      position: absolute;
-      background: url(../../../assets/icons/liked.svg);
-      top: 3px;
-      left: 0;
-      width: 15px;
-      height: 13px;
-    }
-  }
-
-  .dislike {
-    position: relative;
-    padding-left: 17px;
-
-    &::before {
-      content: "";
-      position: absolute;
-      background: url(../../../assets/icons/dislike.svg);
-      top: 3px;
-      left: 0;
-      width: 15px;
-      height: 13px;
-    }
-  }
-
-  .comment {
-    position: relative;
-    padding-left: 15px;
-
-    &::before {
-      content: "";
-      position: absolute;
-      background: url(../../../assets/icons/comments.svg);
-      top: 3px;
-      left: 0;
-      width: 13px;
-      height: 13px;
-    }
-  }
+.data__element {
+  // display: inherit;
+  display: flex;
+  flex-direction: row;
+  // gap: 2px;
 }
 
 .item__title {
